--- a/index.html
+++ b/index.html
@@ -94,16 +94,16 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Veroeros primis</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="#portfolio" class="image featured"><img src="images/design.jpg" alt="" /></a>
+								<h3><a href="#portfolio">Custom Images</a></h3>
+								<p>And editing service</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/mining.jpg" alt="" /></a>
-								<h3><a href="#">Lorem ipsum</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://neox.minerpool.org/workers/GaYEVXijpqad62UPYeSfGrj9qWWY5j3e2w" target="_blank" rel="noopener noreferrer" class="image featured"><img src="images/mining.jpg" alt="" /></a>
+								<h3><a href="https://neox.minerpool.org/workers/GaYEVXijpqad62UPYeSfGrj9qWWY5j3e2w" target="_blank" rel="noopener noreferrer">Cryptocurrency Mining</a></h3>
+								<p>Service and Consulting</p>
 							</article>
 						</div>
 					</div>
@@ -154,24 +154,14 @@
 								<li><a href="https://www.facebook.com/Stardred/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="https://www.linkedin.com/in/chris-porter-58911923b/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://github.com/Stardred/" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<!--
-								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram"><span>Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-foursquare"><span>Foursquare</span></a></li>
-								<li><a href="#" class="icon brands fa-skype"><span>Skype</span></a></li>
-								<li><a href="#" class="icon brands fa-soundcloud"><span>Soundcloud</span></a></li>
-								<li><a href="#" class="icon brands fa-youtube"><span>YouTube</span></a></li>
-								<li><a href="#" class="icon brands fa-blogger"><span>Blogger</span></a></li>
-								<li><a href="#" class="icon brands fa-flickr"><span>Flickr</span></a></li>
-								<li><a href="#" class="icon brands fa-vimeo"><span>Vimeo</span></a></li>
-								-->
+								<li><a href="https://www.youtube.com/channel/UCZXzCK4GIf629N__v8GUQ7A" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
 							</ul>
 							<hr />
 						</div>
 					</div>
 					<footer>
 						<ul id="copyright">
-							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy;<script>document.write( new Date().getFullYear() );</script> Chris Porter. All rights reserved.</li>
 						</ul>
 					</footer>
 				</div>
