--- a/index.html
+++ b/index.html
@@ -40,6 +40,18 @@
 				</div>
 			</article>
 
+		<!-- Introduction Video -->
+			<article id="intro" class="wrapper style3">
+				<div class="container">
+					<header>
+						<h2>Let me introduce myself.</h2>
+						<p>Here's a quick video introduction.</p>
+					</header>
+						<div class="col-4 col-6-medium col-12-small">
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/05L7N4U0ItU" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						</div></div>
+		</article>
+		
 		<!-- Work -->
 			<article id="work" class="wrapper style2">
 				<div class="container">
