--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
 	<head>
 		<title>Chris Porter's Portfolio</title>
 		<link rel="icon" type="image/x-icon" href="/favicon.ico">
-		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
-		<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.0/css/all.css">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -66,21 +64,21 @@
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon featured fa-solid fa-browser"></span>
+								<span class="icon featured solid fa-code"></span>
 								<h3>Web Development</h3>
 								<p>Focus on UI/UX.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon solid featured fa-camera-retro"></span>
+								<span class="icon solid featured fa-object-group"></span>
 								<h3>Graphic Design</h3>
 								<p>Web as well as Print.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon featured fa-thumbs-up"></span>
+								<span class="icon featured solid fa-money-bill-wave"></span>
 								<h3>Cryptocurrency</h3>
 								<p>Mining and Consulting</p>
 							</section>
