--- a/index.html
+++ b/index.html
@@ -136,25 +136,15 @@
 						<p>Just send me a message and I'll be in contact.</p>
 					</header>
 					<div class="row">
-						<div class="col-12">
-							<form action="mailto:stardred@hotmail.com" method="get" enctype="text/plain">
-								<div class="row">
-									<div class="col-6 col-12-small">
-										<input type="text" name="email" id="email" placeholder="Email" />
-									</div>
-									<div class="col-12">
-										<input type="text" name="subject" id="subject" placeholder="Subject" />
-									</div>
+
+
 
 									<div class="col-12">
 										<ul class="actions">
-											<li><input type="submit" value="Open Email" /></li>
-											<li><input type="reset" value="Clear Form" class="alt" /></li>
+											<a href="mailto:stardred@hotmail.com"><li><input type="submit" value="Send Email"/></li></a>
 										</ul>
 									</div>
-								</div>
-							</form>
-						</div>
+
 						<div class="col-12">
 							<hr />
 							<h3>Find me on ...</h3>
