--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Base Template by HTML5 UP and used under the CCA 3.0 license
+	Starting Template by HTML5 UP and used under the CCA 3.0 license
 -->
 <html>
 	<head>
@@ -132,7 +132,7 @@
 			<article id="contact" class="wrapper style4">
 				<div class="container medium">
 					<header>
-						<h2>Interested in designs for you?</h2>
+						<h2>Interested in designs for you or your company?</h2>
 						<p>Just send me a message and I'll be in contact.</p>
 					</header>
 					<div class="row">
@@ -149,11 +149,11 @@
 							<hr />
 							<h3>Find me on ...</h3>
 							<ul class="social">
-								<li><a href="https://twitter.com/stardred" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="https://www.facebook.com/Stardred/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="https://www.linkedin.com/in/chris-porter-58911923b/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="https://github.com/Stardred/" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a href="https://www.youtube.com/channel/UCZXzCK4GIf629N__v8GUQ7A" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
+								<li><a href="https://twitter.com/stardred" target="_blank" rel="noopener noreferrer" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://www.facebook.com/Stardred/" target="_blank" rel="noopener noreferrer" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.linkedin.com/in/chris-porter-58911923b/" target="_blank" rel="noopener noreferrer" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://github.com/Stardred/" target="_blank" rel="noopener noreferrer" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://www.youtube.com/channel/UCZXzCK4GIf629N__v8GUQ7A" target="_blank" rel="noopener noreferrer" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
 							</ul>
 							<hr />
 						</div>
