--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 								<h1>Hi. I'm <strong>Chris Porter</strong>.</h1>
 							</header>
 							<p>And this is <strong>My Portfolio</strong></p>
-							<a href="#work" class="button large scrolly">Learn about what I do</a>
+							<a href="#intro" class="button large scrolly">This is who I am</a>
 						</div>
 					</div>
 				</div>
@@ -51,7 +51,8 @@
 					</header>
 						<div class="col-4 col-6-medium col-12-small">
 							<iframe width="560" height="315" src="https://www.youtube.com/embed/05L7N4U0ItU" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-						</div></div>
+						</div>
+					<div><p></p><a href="#work" class="button large scrolly">Learn about what I do</a></div></div>
 		</article>
 		
 		<!-- Work -->
@@ -122,7 +123,6 @@
 						</div>
 					</div>
 					<footer>
-						<p>Interested in my work?</p>
 						<a href="#contact" class="button large scrolly">Get in touch with me</a>
 					</footer>
 				</div>
