--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						<p>Here's a quick video introduction.</p>
 					</header>
 						<div class="col-4 col-6-medium col-12-small">
-							<iframe width="70%" height="70%" src="https://www.youtube.com/embed/05L7N4U0ItU" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen id="video"></iframe>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/05L7N4U0ItU" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen id="video"></iframe>
 						</div>
 					<div><p></p><a href="#work" class="button large scrolly">Learn about what I do</a></div></div>
 		</article>
