--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="images/fdpic2.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/fdpic2.jpg" alt="Profile Picture" /></span>
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
@@ -102,21 +102,21 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="http://millbrookmaplestore.com" class="image featured"><img src="images/sugarhouse.jpg" target="_blank" rel="noopener noreferrer" alt="" /></a>
+								<a href="http://millbrookmaplestore.com" class="image featured"><img src="images/sugarhouse.jpg" target="_blank" rel="noopener noreferrer" alt="Example Website" /></a>
 								<h3><a href="http://millbrookmaplestore.com" target="_blank" rel="noopener noreferrer">Mill Brook Sugarhouse</a></h3>
 								<p>Web Presence and E-Commerce</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#portfolio" class="image featured"><img src="images/design.jpg" alt="" /></a>
+								<a href="#portfolio" class="image featured"><img src="images/design.jpg" alt="Example Image" /></a>
 								<h3><a href="#portfolio">Custom Images</a></h3>
 								<p>And editing service</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://neox.minerpool.org/workers/GaYEVXijpqad62UPYeSfGrj9qWWY5j3e2w" target="_blank" rel="noopener noreferrer" class="image featured"><img src="images/mining.jpg" alt="" /></a>
+								<a href="https://neox.minerpool.org/workers/GaYEVXijpqad62UPYeSfGrj9qWWY5j3e2w" target="_blank" rel="noopener noreferrer" class="image featured"><img src="images/mining.jpg" alt="Current Mining Pool Site" /></a>
 								<h3><a href="https://neox.minerpool.org/workers/GaYEVXijpqad62UPYeSfGrj9qWWY5j3e2w" target="_blank" rel="noopener noreferrer">Cryptocurrency Mining</a></h3>
 								<p>Service and Consulting</p>
 							</article>
