--- a/tracker.html
+++ b/tracker.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<script src="http://maps.google.com/maps/api/js?key=AIzaSyB8vPkq3jfEM8uqaHCZoxdE6KwMHUHOmbc"></script>
+<script src="https://maps.google.com/maps/api/js?key=AIzaSyB8vPkq3jfEM8uqaHCZoxdE6KwMHUHOmbc"></script>
 <div id="map" style="width:1024px; height:768px"></div>
 <script>
 
