--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 					<li><a href="#top">Top</a></li>
 					<li><a href="#intro">Intro</a></li>
 					<li><a href="#work">Work</a></li>
+					<li><a href="#projects">Projects</a></li>
 					<li><a href="#portfolio">Portfolio</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
@@ -91,7 +92,19 @@
 					</footer>
 				</div>
 			</article>
-
+		<article id="projects" class="wrapper style2">
+				<div class="container">
+					<header>
+						<p>Recent projects include:</p>
+					</header>
+					<div class="row">
+						<div class="col-4 col-6-medium col-12-small"> <a href="/pacman/index.html" class="button small scrolly">Pac Man Game</a> </div>
+						<div class="col-4 col-6-medium col-12-small"> <a href="/eyes/index.html" class="button small scrolly"> Watchful Eyes</a></div>
+						<div class="col-4 col-6-medium col-12-small"> <a href="/tracker/index.html" class="button small scrolly">MBTA Bus Tracking</a></div>
+				</div>
+			</div>
+			</article>
+		
 		<!-- Portfolio -->
 			<article id="portfolio" class="wrapper style3">
 				<div class="container">
