--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						<p>Here's a quick video introduction.</p>
 					</header>
 						<div class="col-4 col-6-medium col-12-small">
-							<iframe width="560" height="315" src="intro.mp4" title="video player" frameborder="0" allowfullscreen id="video"></iframe>
+							<iframe width="560" height="315" src="media/intro.mp4" title="video player" frameborder="0" allowfullscreen id="video"></iframe>
 						</div>
 					<div><p></p><a href="#work" class="button large scrolly">Learn about what I do</a></div></div>
 		</article>
