--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
 					</footer>
 				</div>
 			</article>
+		
+		<!-- Projects -->
 		<article id="projects" class="wrapper style2">
 				<div class="container">
 					<header>
