--- a/index.html
+++ b/index.html
@@ -55,6 +55,17 @@
 							<video width="560" height="315" controls> <source src="media/intro.mp4" title="video player" id="video"></video>
 						</div>
 					<div><p></p><a href="#work" class="button large scrolly">Learn about what I do</a></div></div>
+				<br>
+				<div>
+					<h3>A brief Bio:</h3>
+				</div>
+				<div>
+					<p>I have been involved in web design since the mid 1990s. I am currently expanding on my abilities and learning new languages as well as current versions of older ones.</p>
+					<p>It is my goal to further my abilities and re-enter the field as a full stack developer.</p>
+					<p>I am looking forward to the future and continual learning.</p>
+					<p><a href="#social">Social Links at bottom of page.</a></p>
+					<p><a href="https://github.com/Stardred" class="button" target="_blank" rel="noopener noreferrer">https://github.com/Stardred</a></p>
+				</div>
 		</article>
 		
 		<!-- Work -->
@@ -164,7 +175,7 @@
 						<div class="col-12">
 							<hr />
 							<h3>Find me on ...</h3>
-							<ul class="social">
+							<ul class="social" id="social">
 								<li><a href="https://twitter.com/stardred" target="_blank" rel="noopener noreferrer" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://www.facebook.com/Stardred/" target="_blank" rel="noopener noreferrer" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="https://www.linkedin.com/in/chris-porter-58911923b/" target="_blank" rel="noopener noreferrer" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
