--- a/index.html
+++ b/index.html
@@ -112,9 +112,18 @@
 						<p>Recent projects include:</p>
 					</header>
 					<div class="row">
-						<div class="col-4 col-6-medium col-12-small"> <a href="/pacman/index.html" class="button small scrolly">Pac Man Game</a> </div>
-						<div class="col-4 col-6-medium col-12-small"> <a href="/eyes/index.html" class="button small scrolly"> Watchful Eyes</a></div>
-						<div class="col-4 col-6-medium col-12-small"> <a href="/tracker/index.html" class="button small scrolly">MBTA Bus Tracking</a></div>
+						<div class="col-4 col-6-medium col-12-small"> <a href="/pacman/index.html" class="button small scrolly">Pac Man Game</a>
+						<div>A "Game" where you can create pacmen that travel the screen.</div>
+							<div><a href="https://github.com/Stardred/pacmen">Pacmen Repository</a></div>
+						</div>
+						<div class="col-4 col-6-medium col-12-small"> <a href="/eyes/index.html" class="button small scrolly"> Watchful Eyes</a>
+						<div>Ever get the feeling your being watched? These eyes follow your curser.</div>
+							<div><a href="https://github.com/Stardred/EyeExcercise">EyeExcercise Repository</a></div>
+						</div>
+						<div class="col-4 col-6-medium col-12-small"> <a href="/tracker/index.html" class="button small scrolly">MBTA Bus Tracking</a>
+						<div>Wondering where your bus is? This map will track them for you.</div>
+							<div><a href="https://github.com/Stardred/BusTracker">Bus Tracker Repository</a></div>
+						</div>
 				</div>
 			</div>
 			</article>
