Added recent site

--- a/index.html
+++ b/index.html
@@ -136,21 +136,28 @@
 						<p>These sites use a variety of CMS and custom coding</p>
 					</header>
 					<div class="row">
-						<div class="col-4 col-6-medium col-12-small">
+						<div class="col-6 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="http://millbrookmaplestore.com" class="image featured"><img src="images/sugarhouse.jpg" target="_blank" rel="noopener noreferrer" alt="Example Website" /></a>
 								<h3><a href="http://millbrookmaplestore.com" target="_blank" rel="noopener noreferrer">Mill Brook Sugarhouse</a></h3>
 								<p>Web Presence and E-Commerce</p>
 							</article>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
+						<div class="col-6 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="https://richmondfire.us" class="image featured"><img src="images/rfd.jpg" target="_blank" rel="noopener noreferrer" alt="Example Website" /></a>
+								<h3><a href="https://richmondfire.us" target="_blank" rel="noopener noreferrer">Richmond Fire Department</a></h3>
+								<p>Basic Landing and Info with donation function</p>
+							</article>
+						</div>
+						<div class="col-6 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#portfolio" class="image featured"><img src="images/design.jpg" alt="Example Image" /></a>
 								<h3><a href="#portfolio">Custom Images</a></h3>
 								<p>And editing service</p>
 							</article>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
+						<div class="col-6 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="https://neox.minerpool.org/workers/GaYEVXijpqad62UPYeSfGrj9qWWY5j3e2w" target="_blank" rel="noopener noreferrer" class="image featured"><img src="images/mining.jpg" alt="Current Mining Pool Site" /></a>
 								<h3><a href="https://neox.minerpool.org/workers/GaYEVXijpqad62UPYeSfGrj9qWWY5j3e2w" target="_blank" rel="noopener noreferrer">Cryptocurrency Mining</a></h3>
