--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
 			<article id="portfolio" class="wrapper style3">
 				<div class="container">
 					<header>
-						<h2>Here’s some stuff I recently designed.</h2>
-						<p>These sites use a variety of CMS and custom coding</p>
+						<h2>Here’s some examples I recently designed.</h2>
+						<p>These sites use a variety of CMS and/or custom coding</p>
 					</header>
 					<div class="row">
 						<div class="col-6 col-6-medium col-12-small">
