--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 							<article class="box style2">
 								<a href="https://neox.minerpool.org/workers/GaYEVXijpqad62UPYeSfGrj9qWWY5j3e2w" target="_blank" rel="noopener noreferrer" class="image featured"><img src="images/mining.jpg" alt="Current Mining Pool Site" /></a>
 								<h3><a href="https://neox.minerpool.org/workers/GaYEVXijpqad62UPYeSfGrj9qWWY5j3e2w" target="_blank" rel="noopener noreferrer">Cryptocurrency Mining</a></h3>
-								<p>Service and Consulting</p>
+								<p>* Link to one of the current mining stats</p>
 							</article>
 						</div>
 					</div>
