--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<p>Here's a quick video introduction.</p>
 					</header>
 						<div class="col-4 col-6-medium col-12-small">
-							<video width="560" height="315" controls> <source src="media/intro.mp4" title="video player" id="video"></video>
+							<video width="100%" height="100%" controls> <source src="media/intro.mp4" title="video player" id="video"></video>
 						</div>
 					<div><p></p><a href="#work" class="button large scrolly">Learn about what I do</a></div></div>
 				<br>
