--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<nav id="nav">
 				<ul class="container">
 					<li><a href="#top">Top</a></li>
-					<li><a href="#intro">Intro</a></li>
+					<!-- <li><a href="#intro">Intro</a></li> -->
 					<li><a href="#work">Work</a></li>
 					<li><a href="#projects">Projects</a></li>
 					<li><a href="#portfolio">Portfolio</a></li>
@@ -37,15 +37,15 @@
 							<header>
 								<h1>Hi. I'm <strong>Chris Porter</strong>.</h1>
 							</header>
-							<p>And this is <strong>My Portfolio</strong></p>
-							<a href="#intro" class="button large scrolly">This is who I am</a>
+							<p>Welcome to my <strong>My Portfolio</strong></p>
+							<a href="#work" class="button large scrolly">Learn about what I do</a>
 						</div>
 					</div>
 				</div>
 			</article>
 
 		<!-- Introduction Video -->
-			<article id="intro" class="wrapper style3">
+			<!-- <article id="intro" class="wrapper style3">
 				<div class="container">
 					<header>
 						<h2>Let me introduce myself.</h2>
@@ -66,7 +66,7 @@
 					<p><a href="#social">Social Links at bottom of page.</a></p>
 					<p><a href="https://github.com/Stardred" class="button" target="_blank" rel="noopener noreferrer">https://github.com/Stardred</a></p>
 				</div>
-		</article>
+		</article> -->
 		
 		<!-- Work -->
 			<article id="work" class="wrapper style2">
