--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 					</div>
 					<footer>
 						<p>Is this something your interested in?</p>
-						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
+						<a href="#work" class="button large scrolly">See some of my recent work</a>
 					</footer>
 				</div>
 			</article>
