--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<p>Here's a quick video introduction.</p>
 					</header>
 						<div class="col-4 col-6-medium col-12-small">
-							<video width="100%" height="100%" controls> <source src="media/intro.mp4" title="video player" id="video"></video>
+							<video width="100%" height="100%" controls> <source src="" title="video player" id="video"></video>
 						</div>
 					<div><p></p><a href="#work" class="button large scrolly">Learn about what I do</a></div></div>
 				<br>
@@ -159,8 +159,8 @@
 						</div>
 						<div class="col-6 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://neox.minerpool.org/workers/GaYEVXijpqad62UPYeSfGrj9qWWY5j3e2w" target="_blank" rel="noopener noreferrer" class="image featured"><img src="images/mining.jpg" alt="Current Mining Pool Site" /></a>
-								<h3><a href="https://neox.minerpool.org/workers/GaYEVXijpqad62UPYeSfGrj9qWWY5j3e2w" target="_blank" rel="noopener noreferrer">Cryptocurrency Mining</a></h3>
+								<a href="https://neox.minerpool.pro/workers/GaYEVXijpqad62UPYeSfGrj9qWWY5j3e2w" target="_blank" rel="noopener noreferrer" class="image featured"><img src="images/mining.jpg" alt="Current Mining Pool Site" /></a>
+								<h3><a href="https://neox.minerpool.pro/workers/GaYEVXijpqad62UPYeSfGrj9qWWY5j3e2w" target="_blank" rel="noopener noreferrer">Cryptocurrency Mining</a></h3>
 								<p>* Link to one of the current mining stats</p>
 							</article>
 						</div>
