--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
 						</div>
 						<div class="col-6 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://neox.minerpool.pro/workers/GaYEVXijpqad62UPYeSfGrj9qWWY5j3e2w" target="_blank" rel="noopener noreferrer" class="image featured"><img src="images/mining.jpg" alt="Current Mining Pool Site" /></a>
-								<h3><a href="https://neox.minerpool.pro/workers/GaYEVXijpqad62UPYeSfGrj9qWWY5j3e2w" target="_blank" rel="noopener noreferrer">Cryptocurrency Mining</a></h3>
+								<a href="https://woolypooly.com/en/coin/kas/wallet/kaspa%3Aqq36zex6vqddk078cr7aygrwy7fxy5t7fge8r8x65l4k55tllh8njreudr96a" target="_blank" rel="noopener noreferrer" class="image featured"><img src="images/mining.jpg" alt="Current Mining Pool Site" /></a>
+								<h3><a href="https://woolypooly.com/en/coin/kas/wallet/kaspa%3Aqq36zex6vqddk078cr7aygrwy7fxy5t7fge8r8x65l4k55tllh8njreudr96a" target="_blank" rel="noopener noreferrer">Cryptocurrency Mining</a></h3>
 								<p>* Link to one of the current mining stats</p>
 							</article>
 						</div>
